# schoolwork

./: README.md
cpp/ov1/: CMakeLists.txt  main.cpp  temp.txt
cpp/ov2/: oppg2og3
cpp/ov2/oppg1/: main.cpp
cpp/ov2/oppg4/: main.cpp
cpp/ov2/oppg5/: CMakeLists.txt  main.cpp
cpp/ov2/oppg6/: CMakeLists.txt  main.cpp
cpp/ov3/: CMakeLists.txt  main.cpp
cpp/ov3/oppg1og2/: main.cpp
cpp/ov3/oppg3/: CMakeLists.txt  main.cpp  vare.h
cpp/ov3/oppg4/: CMakeLists.txt  main.cpp
cpp/ov4/oppg1/: main.cpp
cpp/ov4/oppg2/: CMakeLists.txt  main.cpp
cpp/ov5/: CMakeLists.txt  README.md  main.cpp
cpp/ov6/: chess.cpp  echo_server.cpp
cpp/ov7/: CMakeLists.txt  broek.cpp  broek.h  broek_t.cpp  mengde.cpp  mengde.h  mengde_t.cpp  teori.txt
cpp/ov8/: CMakeLists.txt  main.cpp  par.h
sikkerhet/ov10/oppg1/: CMakeLists.txt  main.cpp
sikkerhet/ov10/oppg2/: CMakeLists.txt  main.cpp
sikkerhet/ov10/oppg3/: main.cpp
sikkerhet/ov12/JavaScriptServer/: README.md
sikkerhet/ov12/JavaScriptServer/client/: ._jquery-2.2.3.min.js  index.html  (+1 more)
sikkerhet/ov14/: index.html  package.json  systemjs.config.js
sikkerhet/ov14/app/: app.component.js  app.component.js.map  app.component.ts
sikkerhet/ov16/oppg3/: main.cpp
sikkerhet/ov16/oppg4/: main.cpp
sikkerhet/ov2/: fargedemo  fargetest  fargetest.c  makefile  makefile2  minefarger  minefarger.c
sikkerhet/ov20/oppg4/: main.cpp
sikkerhet/ov3/: flyttjpg  killquake  kompscript  kopier  rydd  wgetscript
sikkerhet/ov5/: nettverk.uxf
sikkerhet/ov7/: brannmur  squid
sikkerhet/ov9/oving9N/: epostsjekk.sh  server.txt  spf.sh
(+7 files in other folders)
